[package]
name = "fmac_test_tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"


[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
actix = "0.13"
actix-rt = "2.7"
once_cell = "1.13"
rand = "0.8"
colored = "2"